fix: navbar alignment issue

--- a/assets/css/shorty.css
+++ b/assets/css/shorty.css
@@ -700,6 +700,11 @@ section {
 		z-index: 9998;
 	}
 
+	nav li {
+	  display: grid;
+	  place-items: center;
+	}
+
 	.navbar a,
 	.navbar a:focus {
 		display: flex;
@@ -736,13 +741,17 @@ section {
 		justify-content: center;
 		background: var(--color-primary);
 		border-radius: 4px;
-		margin: 15px auto;
+		margin: 5px auto;
 		color: #fff;
+	}
+
+	nav li:nth-child(5) {
+	  	margin-top: 2rem !important;
 	}
 
 	.navbar .get-a-quote:hover,
 	.navbar .get-a-quote:focus:hover {
-		color: #fff;
+		color: #fff !important;
 		background: rgba(13, 66, 255, 0.8);
 	}
 
